--- a/_posts/2020-10-08-첫번째-프로젝트-(버튼클릭이벤트).markdown
+++ b/_posts/2020-10-08-첫번째-프로젝트-(버튼클릭이벤트).markdown
@@ -3,7 +3,7 @@ layout: post
 title: 첫번째 프로젝트 (버튼클릭 이벤트)
 date: 2020-10-08 00:00:00 +0300
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
-img: swift.jpg # Add image post (optional)
+img: software.jpg # Add image post (optional)
 tags: [Productivity, Software] # add tag
 ---
 
